alguns requisitos cumpridos

--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Vina+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
-    <p>Top 3 dos melhores sites que existem na web</p>
-    <p>Principais motivos para eu gostar deles</p>
+    <p>Top 3 dos melhores sites que existem na web
+      <!--Adicione uma lista ordenada dos 3 melhores sites que você conhece-->
+      <ol id="list">
+        <li id="google">Google</li>
+        <li id="linkedin">Linkedin</li>
+        <li id="skyscanner">Skyscanner</li>
+      </ol>
+    </p>
+    <p>Principais motivos para eu gostar deles
+      <!--Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta.-->
+   
+
+    </p>
   </body>
 </html>
