--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/index.html
@@ -18,7 +18,13 @@
     </p>
     <p>Principais motivos para eu gostar deles
       <!--Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta.-->
-   
+      <ul>
+        <li>Flexibilidade de pesquisa</li>
+        <li>Publicidade</li>
+        <li>Maps</li>
+        <li>Conteúdo relevante</li>
+        <li>Busca de passagens em várias companhias</li>
+      </ul>
 
     </p>
   </body>
